[package]
name = "snark"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A library for zkSNARK proof systems"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/snark/"
keywords = ["zero knowledge", "cryptography", "zkSNARK", "SNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { path = "../algebra", features = [ "parallel" ] }
bench-utils = { path = "../bench-utils" }
rand = { version = "0.4" }
byteorder = { version = "1" }
rayon = { version = "1" }
smallvec = { version = "0.6" }
bit-vec = "0.4.4"
futures = "0.1"


futures-cpupool = {version = "0.1", optional = true}
num_cpus = {version = "1", optional = true}
crossbeam = {version = "0.7.1", optional = true}


[dev-dependencies]
csv = { version = "1" }

[features]
timer = [ "bench-utils/timer" ]
# singlecore = []
multicore = ["futures-cpupool", "num_cpus", "crossbeam"]
default = ["multicore"]

[[example]]
name = "gm17"
path = "examples/snark-scalability/gm17.rs"
